// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionContainer > should render correctly 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainer > should render correctly with description 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          description
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainer > should render correctly with title 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
          >
            title
          </h2>
        </div>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainer > should render correctly with title and description 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
          >
            title
          </h2>
        </div>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          description
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      />
    </section>
  </div>
</body>
`;

exports[`SectionContainerSkeleton > should render correctly 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-4i8vzz-MuiSkeleton-root"
    />
  </div>
</body>
`;
